# Playroom-Discord-Bot

./: .gitignore  .pre-commit-config.yaml  README.md  bot.db  main.py  pyproject.toml
cogs/: logging.py  moderation.py  test.py  ticket.py
